# RFID

./: .gitignore  CMakeLists.txt  Maychamcong.docx  README.md  extract_log.py  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old  ~$ychamcong.docx
main/: CMakeLists.txt  Kconfig.projbuild  app_audio.c  app_audio.h  app_azure.c  app_azure.h  app_ota.c  app_ota.h  app_rfid.c  app_rfid.h  app_touch.c  app_touch.h  arial_vn_24.c  arial_vn_32.c  arial_vn_48.c  azure_iot_ca.pem  board_lcd_panel.h  board_pins.h  card_profile.c  card_profile.h  font8x8_basic.inc  idf_component.yml  ili9488_panel.c  ili9488_panel.h  lcd_color.h  lcd_panel_config.c  lcd_panel_config.h  lcd_ui.c  lcd_ui.h  lv_port.c  lv_port.h  lv_port_jpeg.c  lv_port_screens.c  main.c  mfrc522.c  mfrc522.h  portal_web.c  portal_web.h  scan_log.c  scan_log.h  (+14 more)
tools/: check_portal_js.py  update_maychamcong_docx.py
tools/examples/: 605_thieu_index.txt
